Fix : Header & Menu z-index

--- a/src/components/Sections/styles/header.module.scss
+++ b/src/components/Sections/styles/header.module.scss
@@ -9,6 +9,7 @@
   top: 0;
   left: 0;
   padding: 25px 0 10px 0;
+  z-index: 1000;
 
   h2 {
     font-family: variables.$primary-font;
